--- a/Course 1/point-of-sale/src/main/resources/application.yaml
+++ b/Course 1/point-of-sale/src/main/resources/application.yaml
@@ -8,8 +8,11 @@ spring:
     password: root
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     database-platform: org.hibernate.dialect.MySQLDialect
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
     generate-ddl: true
     show-sql: true
 
