--- a/Course 1/point-of-sale/pom.xml
+++ b/Course 1/point-of-sale/pom.xml
@@ -72,6 +72,20 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.4.1</version>
 		</dependency>
+		<!--mapstruct -->
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>1.5.5.Final</version>
+			<scope>compile</scope>
+		</dependency>
+		<!--mapstruct-processor -->
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct-processor</artifactId>
+			<version>1.5.5.Final</version>
+			<scope>compile</scope>
+		</dependency>
 
 	</dependencies>
 
